--- a/ratownicy.html
+++ b/ratownicy.html
@@ -7,13 +7,13 @@
     </head>
     <body>
         <div id="banery">
-            <div class="banerlewy">
+            <div class="baner_lewy">
                 <h2>Dodanie zespołu ratowniczego</h2>
             </div>
-            <div class="banersrodek">
+            <div class="baner_srodek">
                 <p>Kontakt:<br> 022 222 11 333</p>
             </div>
-            <div class="banerprawy">
+            <div class="baner_prawy">
                 <img src="obraz.jpg" alt="Ratownicy">
             </div>
         </div>
